Implement FabricViewStateManager